Switch to java 8